--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,15 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/bootcampProjectDb
 spring.datasource.username=postgres
-
 spring.datasource.password=
 spring.jpa.properties.javax.persistence.validation.mode=none
+springdoc.api-docs.path=/api-docs
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=BootcampProjectLog
+
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=ERROR
+logging.level.net.guides=DEBUG
+logging.level.root=INFO
