--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,24 +2,20 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/bootcampProjectDb
-#spring.datasource.username=postgres
-#spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/bootcampProjectDb
+spring.datasource.username=postgres
+spring.datasource.password=
 
-#spring.datasource.url=jdbc:postgresql://localhost:5435/bootcampProject
+#spring.datasource.url=jdbc:postgresql://localhost:5433/bootcampProjectDbDev
 #spring.datasource.username=admin
 #spring.datasource.password=12345
-
-spring.datasource.url=jdbc:postgresql://localhost:5433/bootcampProjectDbDev
-spring.datasource.username=admin
-spring.datasource.password=12345
 
 
 spring.jpa.properties.javax.persistence.validation.mode=none
 springdoc.api-docs.path=/api-docs
 
 spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27018
+spring.data.mongodb.port=27017
 spring.data.mongodb.database=BootcampProjectLog
 
 logging.level.org.springframework.web=INFO
